--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,15 @@
             <version>4.1.1.4</version>
             <scope>provided</scope>
         </dependency>
-	<dependency>
+	    <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-core</artifactId>
+            <version>4.46</version>
+        </dependency>
+        <dependency>
             <groupId>com.j256.ormlite</groupId>
             <artifactId>ormlite-android</artifactId>
             <version>4.46</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
@@ -40,7 +44,7 @@
                 <artifactId>android-maven-plugin</artifactId>
                 <configuration>
                     <sdk>
-                        <!-- platform or api level (api level 16 = platform 4.1)-->
+                        <path>/Users/prasann/Downloads/android-sdk-macosx/</path>
                         <platform>17</platform>
                     </sdk>
                 </configuration>
