--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,21 @@
             <artifactId>ormlite-android</artifactId>
             <version>4.46</version>
         </dependency>
+        <dependency>
+			<groupId>com.octo.android.robospice</groupId>
+			<artifactId>robospice-ormlite</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.octo.android.robospice</groupId>
+			<artifactId>robospice-spring-android</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+        <dependency>
+           <groupId>com.google.code.gson</groupId>
+           <artifactId>gson</artifactId>
+           <version>2.2.4</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -42,13 +57,13 @@
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <configuration>
-                    <sdk>
-                        <path>/Users/prasann/Downloads/android-sdk-macosx/</path>
-                        <platform>17</platform>
-                    </sdk>
-                </configuration>
-            </plugin>
-        </plugins>
+                    <configuration>
+                        <sdk>
+                            <path>/Users/prasann/Downloads/android-sdk-macosx/</path>
+                            <platform>17</platform>
+                        </sdk>
+                    </configuration>
+                </plugin>
+            </plugins>
     </build>
 </project>
