--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,13 +10,6 @@
      <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
      <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".activity.InitialActivity"
-                  android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".activity.MainActivity"
                   android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
             <intent-filter>
@@ -24,12 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.HomeActivity"
+                  android:label="HomeLabel" android:theme="@android:style/Theme.Holo">
+        </activity>
         <activity android:name=".activity.MenuActivity"
-                  android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                  android:label="MenuLabel" android:theme="@android:style/Theme.Holo">
         </activity>
         <service
           android:name="com.octo.android.robospice.GsonSpringAndroidSpiceService"
