--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,10 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.HomeActivity"
-                  android:label="HomeLabel" android:theme="@android:style/Theme.Holo">
+                  android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
         </activity>
         <activity android:name=".activity.MenuActivity"
-                  android:label="MenuLabel" android:theme="@android:style/Theme.Holo">
+                  android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
         </activity>
         <service
           android:name="com.octo.android.robospice.GsonSpringAndroidSpiceService"
